<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:gravity="center"
            android:text="@string/fact_titulo"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeMedium"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/tvSeparador1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/separador"/>

        <TextView
            android:id="@+id/fact_rfc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeSmall" />

        <TextView
            android:id="@+id/fact_razon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeSmall" />

        <TextView
            android:id="@+id/fact_domicilio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeSmall" />

        <TextView
            android:id="@+id/tvfactTitulo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:gravity="center"
            android:text="@string/fact_comp"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeMedium"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvSeparador2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/separador"
            android:layout_marginBottom="@dimen/_15sdp"/>
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexWrap='wrap'
            app:alignContent="center"
            app:flexDirection="row"
            app:alignItems="center"
            app:justifyContent="space_around"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="10dp">
            <TextView
                android:id="@+id/tvfact_uso"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:fontFamily="@font/arial"
                android:text="@string/fact_uso"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeSmall" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:fontFamily="@font/arial"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeSmall" />
            <Spinner
                android:id="@+id/spUso"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:fontFamily="@font/arial"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeSmall" />
        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexWrap='wrap'
            app:alignContent="center"
            app:flexDirection="row"
            app:alignItems="center"
            app:justifyContent="space_around"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="10dp">
            <TextView
                android:id="@+id/tvfact_fp"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:fontFamily="@font/arial"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/fact_formapago"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeSmall" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:fontFamily="@font/arial"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeSmall" />
            <Spinner
                android:id="@+id/spForma"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:fontFamily="@font/arial"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeSmall" />
        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexWrap='wrap'
            app:alignContent="center"
            app:flexDirection="row"
            app:alignItems="center"
            app:justifyContent="space_around"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:layout_marginTop="@dimen/_15sdp">
            <Button
                android:id="@+id/btnFactCobro"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/button_green"
                android:textColor="@drawable/white_text_button"
                android:paddingEnd="5dp"
                android:layout_weight="0.6"
                android:fontFamily="@font/arial"
                android:text="A cobrar"
                android:textSize="@dimen/textSizeSmall" />

            <Button
                android:id="@+id/btnFactGuarda"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0.4"
                android:background="@drawable/button_casiagotado"
                android:paddingEnd="5dp"
                android:text="Factura y cobra"
                android:fontFamily="@font/arial"
                android:textColor="@drawable/white_text_button"
                android:textSize="@dimen/textSizeSmall" />
        </com.google.android.flexbox.FlexboxLayout>


    </LinearLayout>
</ScrollView>