<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acrividades.Dviaje">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout android:id="@+id/recibe_documento_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar"
                android:orientation="vertical">

                <TextView android:id="@+id/txtMensaje01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text=""
                    android:contentDescription="Mensaje 01"
                    android:background="#001524"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeSmall"
                    android:textIsSelectable="true"/>


                <LinearLayout
                    android:id="@+id/layAcciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/acomodo_renglon"
                    android:orientation="vertical">

                    <LinearLayout android:id="@+id/linearRecibeDocumentoRenglon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="0dp">

                        <ImageButton
                            android:id="@+id/btnAnt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:background="@color/colorLigthGray"
                            android:contentDescription="Anterior"
                            android:paddingVertical="5dp"
                            android:src="@drawable/left_arrow"
                            tools:ignore="TouchTargetSizeCheck" />

                        <TextView android:id="@+id/txtReng"
                            android:layout_width="0dp"
                            android:layout_weight="0.6"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/arial"
                            android:text="Renglón"
                            android:textColor="@color/grisMedio"
                            android:background="@color/white"
                            android:textAlignment="center"
                            android:textSize="@dimen/textSizeMedium"/>

                        <ImageButton
                            android:id="@+id/btnSig"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:background="@color/colorLigthGray"
                            android:contentDescription="Siguiente"
                            android:paddingVertical="5dp"
                            android:src="@drawable/right_arrow"
                            tools:ignore="TouchTargetSizeCheck" />
                    </LinearLayout>

                </LinearLayout>

                <TextView android:id="@+id/txtBqd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:fontFamily="monospace"
                    android:background="#445D48"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="@dimen/textSizeSmall"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:paddingHorizontal="10dp">

                        <TextView android:id="@+id/txtFolio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Folio:"
                            android:fontFamily="@font/arial"
                            android:textColor="@color/black"
                            android:textAlignment="center"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:textSize="@dimen/textSizeSmall"/>

                        <EditText
                            android:id="@+id/editCodigo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/arial"
                            android:lines="1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textSizeXSmall"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                        <ImageButton
                            android:id="@+id/btnBarcode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_15sdp"
                            android:background="@drawable/button_shape"
                            android:backgroundTint="@color/zxing_custom_possible_result_points"
                            android:contentDescription="Escanear código de barras"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="5dp"
                            android:src="@drawable/bars_code"
                            tools:ignore="TouchTargetSizeCheck" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnVerDetalle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_casiagotado"
                        android:fontFamily="@font/arial"
                        android:paddingHorizontal="5dp"
                        android:text="@string/viaj_detalle"
                        android:textColor="@drawable/white_text_button"
                        android:textSize="@dimen/textSizeTiny"
                        tools:ignore="TextSizeCheck" />

                    <Button
                        android:id="@+id/btnCargaEnvio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_26sdp"
                        android:background="@drawable/button_blue600"
                        android:fontFamily="@font/arial"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:text="@string/viaj_carga"
                        android:textColor="@drawable/white_text_button"
                        android:textSize="@dimen/textSizeTiny"
                        tools:ignore="TextSizeCheck" />

                    <Button
                        android:id="@+id/btnFinViaje"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:background="@drawable/button_red"
                        android:fontFamily="@font/arial"
                        android:paddingHorizontal="@dimen/_15sdp"
                        android:text="@string/viaj_fin"
                        android:textColor="@drawable/white_text_button"
                        android:textSize="@dimen/textSizeTiny"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center">




                    </LinearLayout>
                </LinearLayout>


        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="0dp">

            <include
                android:id="@+id/Mensaje"
                layout="@layout/mensaje" />
        </LinearLayout>
    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>